<resources>
    <string name="app_name">ReadProPlus+</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="back">Back</string>

    <string name="prompt_name">Name</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_username">Username</string>

    <string name="error_password_match">Passwords doesn\'t match</string>
    <string name="error_username_exists">Username already exists</string>
    <string name="error_register">Something went wrong. Please try again</string>

    <string name="wants_to">Do you want to…</string>
    <string name="action_join_group">Join a group</string>
    <string name="or">or</string>
    <string name="action_create_group">Create a group</string>
    <string name="action_swipe_down">Swipe down!</string>

    <string name="search_for_group">Search for a group…</string>
    <string name="create_group_name">Enter a group name…</string>
    <string name="search_for_member">Search for users</string>
    <string name="search_for_beacon">Search for beacons</string>
    <string name="search_for_users">Search for users</string>
    <string name="create_the_group">Create the group</string>
    <string name="added_beacons">Added beacons</string>

    <string name="users">Members</string>
    <string name="beacons">Beacons</string>
    <string name="beacons_in_group">Beacons in group</string>

    <string name="start_member_search">Start searching for users!</string>
    <string name="member_added">Member added to group!</string>

    <string name="continue_members">Continue</string>
    <string name="members">Members</string>

    <string name="something_wrong">Something went wrong, try again…</string>

    <!-- Group related -->
    <string name="groups">Groups</string>
    <string name="groups_active_list_title">Active groups</string>
    <string name="my_groups">My groups</string>
    <string name="image_description">This image needs a description</string>
    <string name="group_members">Members</string>
    <string name="group_join">Join group</string>
    <string name="group_name_filler">GROUP NAME</string>
    <string name="already_in_group">Already joined</string>


    <string name="points">Points</string>
    <string name="personal_points_ingroup">Personal points in this group</string>

    <!-- Drawer -->
    <string name="drawer_join_create_group">Join or create a group</string>
    <string name="drawer_your_groups">Your groups</string>
    <string name="drawer_temporary_log_out">Log out</string>
    <string name="drawer_settings">Settings</string>

    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="latest_activity">Latest activity</string>
    <string name="see_more">See more</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="could_not_refres_user">Could not refresh user. Please sign out and in again for changes to take place</string>
    <string name="refresh">Refresh</string>
    <string name="enter_area">Entered area for:</string>
    <string name="exit_area">Exited area for:</string>
    <string name="weird_area">You did something weird in area for:</string>


</resources>
