<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"

    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_margin="2dp"
        >

        <LinearLayout android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="72dp"
            android:orientation="vertical"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edittext_login_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="ttt" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/edittext_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:text="tttr"

                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/edittext_user_sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="192dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_colored"
                android:padding="8dp"
                android:text="@string/action_sign_in_short"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_register_group_button"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>