<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="no.uib.info331.activities.RegisterUserActivity">

    <!-- Register progress -->
    <ProgressBar
        android:id="@+id/view_register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        >



            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/view_register_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="72dp"
                android:orientation="vertical"
                android:paddingEnd="32dp"
                android:paddingStart="32dp"
                android:focusableInTouchMode="true"
                >

                <LinearLayout
                    android:id="@+id/user_register_form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edittext_register_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="text"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edittext_password_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edittext_repeat_password_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_repeat_password"
                            android:inputType="textPassword"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/button_register_button"
                        android:text="@string/action_register"
                        android:textStyle="bold"
                        style="?android:textAppearanceSmall"
                        android:layout_width="192dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="36dp"
                        android:background="@drawable/button_colored"
                        android:padding="8dp"
                        android:textColor="#fff"

                        />
                    <Button
                        android:id="@+id/button_back_to_login"
                        style="?android:borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/back"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>
            </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>