<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.uib.info331.activities.UserProfileActivity"
    android:clipToPadding="false"

    >
    <!-- Has to stay outside  the content relativelayout-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_group_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_background_toolbar_translucent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:elevation="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Groupname"
            android:id="@+id/textview_group_profile_toolbar_title"
            android:fontFamily="sans-serif-light"
            android:textSize="24sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            />
    </android.support.v7.widget.Toolbar>

    <!--Content-->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageview_group_profile_pic"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                android:background="@drawable/login_splash"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            >

            <TextView
                android:id="@+id/textview_group_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groups"
                android:textSize="35sp"
                android:textColor="@color/colorNavBar"
                android:textAllCaps="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/btn_join_group" />

            <TextView
                android:id="@+id/textview_group_pts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textSize="15sp"
                android:layout_below="@id/textview_group_display_name"
                android:layout_centerHorizontal="true"
                />


                <Button
                    android:id="@+id/btn_join_group"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/group_join"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@color/accent"
                    android:layout_below="@id/textview_group_pts"
                    android:layout_centerHorizontal="true"

                    />



            <TextView
                android:id="@+id/text_view_header_member_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_join_group"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/group_members" />

            <ListView
                android:id="@+id/listview_show_members_in_group"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_below="@id/text_view_header_member_list" />

        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>