<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_parent"
    tools:context="no.uib.info331.activities.UserProfileActivity"
    android:clipToPadding="false"

    >
    <!-- Has to stay outside  the content relativelayout-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:elevation="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_beacon"
            android:id="@+id/textview_group_profile_toolbar_title"
            android:fontFamily="sans-serif-light"
            android:textSize="24sp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/white"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_search_for_beacons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/imageview_add_person"
                    android:layout_toStartOf="@id/imagebutton_search_for_beacons"
                    android:layout_alignParentTop="true"


                    >
                <EditText
                        android:id="@+id/edittext_create_search_for_beacons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_for_beacon"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textAutoComplete"
                        android:maxLines="1"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/imagebutton_search_for_beacons"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_search_accentcolor"

                    />


                <ListView
                    android:id="@+id/listview_beacon_search_result"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/textinputlayout_search_for_beacons"

                    />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                >
                <TextView
                    android:id="@+id/textview_added_beacons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/added_beacons"
                    android:fontFamily="sans-serif-light"
                    android:textSize="22sp"
                    />

                <ListView
                    android:id="@+id/listview_added_beacons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_below="@+id/textview_added_beacons"
                    android:layout_above="@id/btn_accept_searched_beacons"

                    />
                <Button
                    android:id="@+id/btn_accept_searched_beacons"
                    style="?android:borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="-16dp"
                    android:layout_marginEnd="-8dp"
                    android:text="@string/continue_members"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>