<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.uib.info331.activities.DashboardActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:elevation="10dp"

        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <ImageButton
            android:id="@+id/btn_menu_dashboard"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_menu_hamburger"
            android:background="?attr/selectableItemBackground"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:id="@+id/toolbar_buildselect_title"
            android:fontFamily="sans-serif-light"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="24dp"
            />
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:id="@+id/scrollview_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:clipToPadding="false"
            android:orientation="vertical"
            >
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="24sp"
                        android:text="@string/latest_activity"
                        android:layout_alignParentTop="true"
                        />
                    <TextView
                        android:id="@+id/textview_dashboard_latest_activity_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="32sp"
                        android:text="No registered events"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="28dp"

                        />
                    <TextView
                        android:id="@+id/textview_dashboard_latest_activity_timestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:layout_below="@+id/textview_dashboard_latest_activity_text"
                        android:textSize="16sp"
                        android:text="Timestamp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="28dp"

                        />
                    <Button
                        android:id="@+id/btn_dashboard_latest_activity"
                        style="?android:borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:text="@string/refresh"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="24sp"
                        android:text="@string/points"
                        android:layout_alignParentTop="true"
                        />
                    <TextView
                        android:id="@+id/textview_dashboard_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="32sp"
                        android:text="points"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="28dp"

                        />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="24sp"
                        android:text="Groups"
                        android:layout_alignParentTop="true"
                        />
                    <ListView
                        android:id="@+id/listview_dashboard_user_groups"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >

                    </ListView>
                </LinearLayout>

            </android.support.v7.widget.CardView>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>
